[package]
name = "jast_lib"
version = "0.1.0"
edition = "2021"
authors = ["Francisco Veiras"]
description = "minimalist backend framework to practice"
documentation = "https://github.com/fran-veiras/Jast"
homepage = "https://github.com/fran-veiras/Jast"
repository = "https://github.com/fran-veiras/Jast"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "jast_lib"
path = "src/jast.rs"

[dependencies]
serde_json = "1.0.93"
chrono = "0.4.24"
