[dependencies]
chrono = "0.4.24"
num_cpus = "1.0"
serde_json = "1.0.93"

[lib]
name = "jast_lib"
path = "src/jast.rs"

[package]
authors = ["Francisco Veiras"]
description = "minimalist backend framework to practice"
documentation = "https://github.com/fran-veiras/Jast"
edition = "2021"
homepage = "https://github.com/fran-veiras/Jast"
license = "MIT"
name = "jast_lib"
repository = "https://github.com/fran-veiras/Jast"
version = "0.1.2"
